# musak-annotations

./: README.md  musak-annotations.cabal
src/: ClusterShapes.hs  HighlightShapes.hs  Main.hs  MakeShapeFiles.hs  MuSAK.hs
src/MuSAK/: Annotations.hs
src/MuSAK/Annotations/: Clustering.hs  Drawing.hs  Geometry.hs  Graph.hs  IOUtils.hs  Pixelisation.hs  Segmentation.hs  Similarity.hs  Types.hs
src/MuSAK/Annotations/Clustering/: DistanceThreshold.hs  KMeans.hs
src/MuSAK/Annotations/Segmentation/: Contiguity.hs
src/MuSAK/Annotations/Similarity/: SURF.hs  Turning.hs
tests/: MuSAKTests.hs  TestTypes.hs
