name: musak-annotations
version: 0.1
synopsis: Analysis of vector drawings
homepage: http://www.transforming-musicology.org/tools/metaMuSAK/
author: Richard Lewis
license: GPL
build-type: Simple
cabal-version: >= 1.9.2

library
  build-depends: base, containers, cassava, time, bytestring, vector, gd, filepath, directory, Glob
  exposed-modules: MuSAK.Annotations, MuSAK.Annotations.Types, MuSAK.Annotations.Graph, MuSAK.Annotations.Geometry, MuSAK.Annotations.Segmentation, MuSAK.Annotations.Drawing, MuSAK.Annotations.IOUtils, MuSAK.Annotations.Similarity.Turning
  hs-source-dirs: src
  ghc-options: -Wall

executable musak-dump-shapes
  build-depends: base, containers, cassava, time, bytestring, musak-annotations, vector, gd, filepath, Glob, directory
  hs-source-dirs: src
  main-is: MakeShapeFiles.hs
  ghc-options: -Wall

executable musak-highlight-shapes
  build-depends: base, containers, cassava, time, bytestring, musak-annotations, vector, gd, filepath, Glob, directory, optparse-applicative
  hs-source-dirs: src
  main-is: HighlightShapes.hs
  ghc-options: -Wall

test-suite musak-tests
  type: detailed-0.9
  test-module: MuSAKTests
  build-depends: base, Cabal >= 1.9.2, containers, cassava, time, bytestring, vector
  hs-source-dirs: src, tests
  other-modules: MuSAK.Annotations.Types, MuSAK.Annotations.Geometry
