name: musak-annotations
version: 0.1
synopsis: Analysis of vector drawings
homepage: http://www.transforming-musicology.org/tools/metaMuSAK/
author: Richard Lewis
license: GPL
build-type: Simple
cabal-version: >= 1.9.2

library
  build-depends: base, containers, cassava, time, bytestring, vector, gd, filepath, directory, Glob, Rasterific, JuicyPixels, CV >= 0.4.0.0
  exposed-modules: MuSAK.Annotations, MuSAK.Annotations.Types, MuSAK.Annotations.Graph, MuSAK.Annotations.Geometry, MuSAK.Annotations.Segmentation.Contiguity, MuSAK.Annotations.Drawing, MuSAK.Annotations.IOUtils, MuSAK.Annotations.Similarity.Turning, MuSAK.Annotations.Clustering.KMeans, MuSAK.Annotations.Pixelisation
  hs-source-dirs: src
  ghc-options: -Wall

executable musak-annotations
  build-depends: base, containers, cassava, time, bytestring, musak-annotations, vector, gd, filepath, Glob, directory, optparse-applicative
  hs-source-dirs: src
  main-is: Main.hs
  ghc-options: -Wall

test-suite musak-tests
  type: detailed-0.9
  test-module: MuSAKTests
  build-depends: base, Cabal >= 1.9.2, containers, cassava, time, bytestring, vector, directory, filepath, Glob
  hs-source-dirs: src, tests
  other-modules: MuSAK.Annotations.Types, MuSAK.Annotations.Geometry, MuSAK.Annotations.Similarity.Turning, MuSAK.Annotations.IOUtils, MuSAK.Annotations.Segmentation.Contiguity
